--- a/backend/.render.yaml
+++ b/backend/.render.yaml
@@ -2,5 +2,5 @@ services:
   - type: web
     name: expense-backend
     env: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn backend.wsgi:application"
+    buildCommand: "./build.sh"
+    startCommand: "gunicorn expense.wsgi:application"
