--- a/backend/.render.yaml
+++ b/backend/.render.yaml
@@ -3,4 +3,4 @@ services:
     name: expense-backend
     env: python
     buildCommand: "./build.sh"
-    startCommand: gunicorn backend.wsgi:application
+    startCommand: gunicorn backend.backend.wsgi:application
